chore: API transaction get list and create trx
